# handler/apple_sign_in.go
@@ -18,13 +18,20 @@ type Token struct {
 	Token string `json:"token" `
 }
 
+// @Summary 애플 로그인 API
+// @Description Token을 받아 access token을 반환합니다.
+// @Accept json
+// @Produce json
+// @Param token body string true "애플로그인 token"
+// @Success 200 {object} models.Auth
+// @Failure 400 {object} message
+// @Failure 500 {object} message
+// @Router /apple-sign-in [post]
 func appleSignIn() echo.HandlerFunc {
 	return func(c echo.Context) error {
 		token := new(Token)
 		if err := c.Bind(token); err != nil {
-			return c.JSON(http.StatusBadRequest, map[string]string{
-				"message": "bad request",
-			})
+			return c.JSON(http.StatusBadRequest, message{"bad request"})
 		}
 
 		teamID := os.Getenv("APPLE_TEAM_ID")
@@ -56,15 +63,13 @@ func appleSignIn() echo.HandlerFunc {
 				AccessToken: &accessToken,
 				ExpiredAt:   &expiredAt,
 			}); err.Error != nil {
-				return c.JSON(http.StatusInternalServerError, map[string]string{
-					"message": "Failed insert user",
-				})
+				return c.JSON(http.StatusInternalServerError, message{"Failed insert user"})
 			}
 		}
 
-		if err := c.JSON(http.StatusOK, map[string]string{
-			"message":      "Login Success",
-			"access_token": accessToken,
+		if err := c.JSON(http.StatusOK, models.Auth{
+			AccessToken: accessToken,
+			ExpiredAt:   expiredAt.Format("2006-01-02"),
 		}); err != nil {
 			return errors.Wrap(err, "signIn")
 		}
